--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,61 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#404040"
     tools:context=".MainActivity">
 
     <TextView
+        style="@style/CalculatorHeader"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/CalculatorResult">
+    </TextView>
+    <TextView
+        android:id="@+id/CalculatorResult"
+        style="@style/CalculatorResult"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/buttonsTable">
+    </TextView>
+    <TableLayout
+        android:id="@+id/buttonsTable"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:stretchColumns="*"
+        android:layout_gravity="center"
+        android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent">
+        <TableRow>
+            <Button style="@style/CalculatorButton" android:text="7"/>
+            <Button style="@style/CalculatorButton" android:text="8"/>
+            <Button style="@style/CalculatorButton" android:text="9"/>
+            <Button style="@style/CalculatorOperatorButton" android:text="÷"/>
+        </TableRow>
+        <TableRow>
+            <Button style="@style/CalculatorButton" android:text="4"/>
+            <Button style="@style/CalculatorButton" android:text="5"/>
+            <Button style="@style/CalculatorButton" android:text="6"/>
+            <Button style="@style/CalculatorOperatorButton" android:text="x"/>
+        </TableRow>
+        <TableRow>
+            <Button style="@style/CalculatorButton" android:text="1"/>
+            <Button style="@style/CalculatorButton" android:text="2"/>
+            <Button style="@style/CalculatorButton" android:text="3"/>
+            <Button style="@style/CalculatorOperatorButton" android:text="+"/>
+        </TableRow>
+        <TableRow>
+            <Button style="@style/CalculatorButton" android:text="0"/>
+            <Button style="@style/CalculatorButton" android:text="."/>
+            <Button style="@style/CalculatorClearButton" android:text="C"/>
+            <Button style="@style/CalculatorOperatorButton" android:text="-"/>
+        </TableRow>
+        <TableRow>
+            <Button
+                style="@style/CalculatorEqualsButton" android:text="=" />
+        </TableRow>
+    </TableLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
